# codex-quickcheck

./: README.md  codex-quickcheck.cabal  stack.yaml
examples/insert/: Insert.hs  Makefile  solution1.c  solution2.c
examples/password/: Makefile  Password.hs  solution1.c  solution2.c
examples/queue/: Makefile  Queue.hs  queue.c
examples/sort/: Makefile  Sort.hs  solution1.c  solution2.c  solution3.c
src/Codex/: QuickCheck.hs  QuickCheck.hs~
src/Codex/QuickCheck/: Args.hs  Assertions.hs  C.hs  Main.hs  Modifiers.hs  Modifiers.hs~  Property.hs  Runner.hs
src/Codex/QuickCheck/C/: Property.hs  Types.hs
