name:                codex-quickcheck
version:             0.1.0.0
synopsis:            Customized QuickCheck testing 
description:         Please see README.md
homepage:            https://github.com/pbv/codex-quickcheck
license:             MIT
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2017 Pedro Vasconcelos
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codex.QuickCheck
                       Codex.QuickCheck.C
                       Codex.QuickCheck.Modifiers
                       Codex.QuickCheck.Assertions
  build-depends:       base                  >= 4.7 && < 5,
                       QuickCheck            >= 2.8
  default-language:    Haskell2010 


source-repository head
  type:     git
  location: https://github.com/pbv/codex-quickcheck
