name:                codex-quickcheck
version:             0.2.2.0
synopsis:            Customized QuickCheck testing for Codex exercises
description:         Please see README.md
homepage:            https://github.com/pbv/codex-quickcheck
license:             MIT
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2017 Pedro Vasconcelos
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codex.QuickCheck
                       Codex.QuickCheck.C
                       Codex.QuickCheck.Modifiers
                       Codex.QuickCheck.Property
                       Codex.QuickCheck.Main
                       Codex.QuickCheck.Assertions
  other-modules:       Codex.QuickCheck.Args
  build-depends:       base >= 4.9, random, QuickCheck >= 2.12
  default-language:    Haskell2010 


source-repository head
  type:     git
  location: https://github.com/pbv/codex-quickcheck
